# AdventOfCode

./: README.md
2024/: .gitignore  README.md  pyproject.toml
2024/data/: day07-input.txt  day08-output.txt  day12-input.txt  day13-input.txt  day16-input.txt  day17-input.txt  day18-input.txt
2024/data/day14/: .gitignore
2024/data/day15/: .gitignore
2024/src/aoc2024/: day1.ipynb  day10.ipynb  day11.ipynb  day12.ipynb  day13.ipynb  day14.ipynb  day15.ipynb  day16.ipynb  day17.ipynb  day17.py  day18.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day6_current_grid.txt  day7.ipynb  day8.ipynb  day9.ipynb  emulator.py  grid_path_search.py
