[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'aoc2024'
version = "1.0.0"
authors = [
    {name = "alexander ressler", email = "alexander.ressler@gmail.com"},
]

requires-python = '>= 3.12'
dependencies = [
    'jupyter'
]

[project.optional-dependencies]
dev = ['black', 'pylint', 'pytest']
